# parallel-getter

./: CHANGELOG.md  Cargo.toml  README.md
examples/: example.rs
src/: lib.rs  range.rs
