[package]
name = "parallel-getter"
version = "0.2.0"
description = "Fetch a file with parallel GET requests"
repository = "https://github.com/pop-os/parallel-getter"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["parallel", "download", "get"]
categories = ["network-programming"]

[dependencies]
progress-streams = "1.0.0"
reqwest = { version = "0.10.4", features = ["blocking"] }

tempfile = "3.0.4"
numtoa = "0.2.3"
crossbeam = "0.4.1"
